--- a/stylesb.css
+++ b/stylesb.css
@@ -215,7 +215,7 @@ ul li:hover {
 .bannerp h4
 {
     color: #FD1C03;
-    font-size: 2rem;
+    font-size: 1.5rem;
     margin-top: 65px;
    
 
@@ -224,13 +224,13 @@ ul li:hover {
 .bannerp h4 span
 {
     color: #DAEE01;
-    font-size: 2rem;
+    font-size: 1.5rem;
 }
 
 .bannerp h3
 {
     color: #66FF00;
-    font-size: 2rem;
+    font-size: 1.5rem;
     font-weight: bolder;
      margin-bottom: 50px;
 
@@ -289,12 +289,25 @@ footer {
 main {
   flex: 1; /* This makes the main content grow to fill the remaining space */
     background-color: green;
-    color: yellow;
+    color: greenyellow;
     width: 100%;           /* Or max-width: 1200px; */
     margin-left: auto;
     margin-right: auto;
-    padding: 0;
+    justify-content: left;
+    text-align: justify;
+    padding: 10px;
 }
+
+main h2 {
+    color: red;
+    font-weight: bold;
+}
+
+main  h3 {
+    color: red;
+    font-weight: bold;
+}
+
 
 
 
@@ -319,6 +332,8 @@ main {
     justify-content: center;
     text-align: justify; 
     font-family: Arial, Helvetica, sans-serif;
+    color: red;
+    font-weight: bold;
     
 }
 
@@ -326,6 +341,8 @@ main {
     background-color: #f9f9f9;
     border: 1px solid #ddd;
     padding: 70px;
+    color: red;
+    font-weight: bold;
     border-radius: 5px;
     /* Optional: use flexbox to center content vertically */
     display: flex;
