--- a/stylesb.css
+++ b/stylesb.css
@@ -70,10 +70,11 @@ ul li:hover {
     transition: 0.3s;
     }
 
-#hamburger-icon {
+#hamburger-icon {  /** This is for the icon not to display on desktop and only on mobile */
     margin: auto 0;
     display: none;
     cursor: pointer;
+    
     
     
 }
@@ -84,6 +85,7 @@ ul li:hover {
     background-color: white;
     margin: 6px 0;
     transition: 0.4s;
+    right: -20%;
     
 
 }
@@ -108,29 +110,36 @@ ul li:hover {
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-   
-    
+      
 }
 
 .mobile-menu{
     display: none;
     position: absolute;
-    top: 160px;
-    left: 0;
-    right: 20px;
-    height: calc(100vh - 50px);
-    width: 100%;
-    min-width: 160px;
+    top: 50px;
+    left: -130%; /** adjusts where the menu items appear */
+      min-width: 100px;
   box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
   list-style: none;
   padding: 0;
   margin: 0;
   z-index: 1;
+ 
   
 }
 
+.nav {
+    display: flex;             /* 1. Use Flexbox on the parent container */
+    justify-content: space-between; /* 2. Push elements to opposite ends */
+    align-items: center;       /* 3. Vertically center the items */
+    width: 100%;
+    height: 60px; /* Example height */
+    padding: 0 20px; /* Add some padding to the sides */
+    /* Add other navbar styling like background color here */
+}
+
 .mobile-menu li {
-    margin: 10px;
+    margin: 1px;
     
 }
 
@@ -139,15 +148,24 @@ ul li:hover {
 @media  only screen and (max-width: 600px){
     header nav {
         display: none;
+        position: relative;
     }
 
 
 #hamburger-icon{
     display: block;
+
+    /** I added the following four lines to push the menu icon to the right**/
+    position: absolute;
+    right: 15px; /* Adjust spacing from the edge */
+    top: 31%;
+    transform: translateY(-50%); /* Centers vertically */
     
 }
 
 }
+
+
 
 .top-phrase {
   background-color: #f8f9fa; /* Light background */
